added invitations and notifications features
