# backend/src/invitations/dto/create-invitation.dto.ts
@@ -1,0 +1,16 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsEmail, IsNotEmpty, IsString } from 'class-validator';
+import { Transform } from 'class-transformer';
+
+export class CreateInvitationDto {
+  @ApiProperty({ example: 'friend@example.com' })
+  @IsEmail()
+  @Transform(({ value }: { value: string }) => value.trim().toLowerCase())
+  @IsNotEmpty()
+  email!: string;
+
+  @ApiProperty({ example: 'clxxxxxxxxxxxxxxxxx' })
+  @IsString()
+  @IsNotEmpty()
+  splitId!: string;
+}
