# backend/src/invitations/dto/invitation-response.dto.ts
@@ -1,0 +1,18 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class InvitationResponseDto {
+  @ApiProperty()
+  id!: string;
+
+  @ApiProperty()
+  senderId!: string;
+
+  @ApiProperty()
+  receiverId!: string;
+
+  @ApiProperty()
+  splitId!: string;
+
+  @ApiProperty()
+  createdAt!: Date;
+}
