# backend/src/notifications/dto/paginated-notifications-response.dto.ts
@@ -1,0 +1,13 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { NotificationResponseDto } from './notification-response.dto';
+
+export class PaginatedNotificationsResponseDto {
+  @ApiProperty({ type: [NotificationResponseDto] })
+  items!: NotificationResponseDto[];
+
+  @ApiProperty()
+  total!: number;
+
+  @ApiProperty()
+  hasMore!: boolean;
+}
