# backend/src/notifications/dto/unread-count-response.dto.ts
@@ -1,0 +1,6 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class UnreadCountResponseDto {
+  @ApiProperty()
+  count!: number;
+}
